--- a/style.css
+++ b/style.css
@@ -562,10 +562,9 @@ hr {
         margin-left: 109%;
     }
 
-    .end-pain, .end-intro-pain {
+    .end-pain {
         margin-top: 55%;
         margin-left: -2%;
-        margin-top: 10%;
     }
 
     .search-btn {
