--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ nav .menu-nav li a {
 /* blog */
 .box {
     background-color: #fff;
-    width: 895px;
+    max-width: 895px;
     margin: 45px;
     box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
 }
