--- a/style.css
+++ b/style.css
@@ -154,12 +154,13 @@ nav .menu-nav li a {
 
 .mota .read button {
     padding: 15px;
-    background-color: #fff;
+    background-color: #ccc;
     cursor: pointer;
+    border: none;
 }
 
 .mota .read button:hover {
-    background-color: #ccc;
+    background-color: darkgray;
 }
 
 .mota .number {
