--- a/style.css
+++ b/style.css
@@ -291,6 +291,7 @@ hr {
     cursor: not-allowed;
     opacity: 0.4;
     margin-top: 20px;
+    border: none;
 }
 
 .end .previous:hover {
@@ -308,6 +309,7 @@ hr {
     background-color: #000;
     padding: 15px;
     cursor: pointer;
+    border: none;
 }
 
 .end .next:hover {
