--- a/style.css
+++ b/style.css
@@ -91,17 +91,53 @@ nav .menu-nav li a {
     cursor: pointer;
 }
 
-.search-btn {
-    float: right;
-    color: #fff;
-    margin-top: -43px;
-    cursor: pointer;
-    padding: 10px 20px;
+/* Search */
+.search-box{
+    position: absolute;
+    height: 28px;
+    padding: 14px;
+    border-radius: 40px;
+    top: 6px;
+    right: 6px;
 }
 
-.search-btn:hover {
-    background-color: #000;
-    transition: all 0.3s;
+.search-pain {
+    position: absolute;
+    right: 10px;
+    bottom: 1px;
+    font-size: 16px;
+    color: #fff;
+}
+
+.search-pain:hover {
+    color: #000;
+}
+
+/*Ẩn Ô Input*/
+.search-box input{
+    background: none;
+    border: none;
+    outline: none;
+    float: left;
+    padding: 0;
+    font-size: 15px;
+    width: 0px;
+    transition: all 0.9s;
+    margin-top: -8px;
+}
+
+/*Hiển thị input khi người dùng hover vào search-box*/
+.search-box:hover {
+    background-color: #fff;
+}
+
+.search-box:hover input{
+    width: 240px;
+    padding: 0 6px;
+}
+.search-box input:focus{
+    width: 240px;
+    padding: 0 6px;
 }
 
 /* my blog */
