--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ html {
     top: 0;
     left: 0;
     right: 0;
-    /* z-index: 999; */
+    z-index: 999; 
     box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
 }
 
